Fix color contrast on cells

--- a/app/styles/_grid-cell.scss
+++ b/app/styles/_grid-cell.scss
@@ -4,43 +4,44 @@
   cursor: pointer;
 
   &--revealed {
-    background-color: rgba(225, 225, 225, 1);
+    background-color: #E1E1E1;
   }
 
   &--mine-stepped {
-    background-color: rgba(252, 26, 17, 1);
+    background-color: #FC1A11;
+    color: #0F0844;
   }
 
   &--1mines {
-    color: rgba(255, 0, 0, 1);
+    color: #CC0000;
   }
 
   &--2mines {
-    color: rgba(128, 0, 128, 1);
+    color: #800080;
   }
 
   &--3mines {
-    color: rgba(17, 138, 20, 1);
+    color: #116913;
   }
 
   &--4mines {
-    color: rgba(102, 255, 255, 1);
+    color: #006B6B;
   }
 
   &--5mines {
-    color: rgba(0, 128, 255, 1);
+    color: #005EBD;
   }
 
   &--6mines {
-    color: rgba(255, 0, 255, 1);
+    color: #AD00AD;
   }
 
   &--7mines {
-    color: rgba(204, 0, 102, 1);
+    color: #C20061;
   }
 
   &--8mines {
-    color: rgba(204, 102, 102, 1);
+    color: #B03B3B;
   }
 
   margin: 3px;
